--- a/capitulo1/estadoarte.tex
+++ b/capitulo1/estadoarte.tex
@@ -25,11 +25,11 @@ Actualmente en el mercado existen diferentes alternativas para los usuarios que 
 		\begin{tabular}{l|L{9cm}|l}
 		SOFTWARE & CARACTERÍSTICAS & PRECIO EN EL MERCADO\\
 		\hline
-			Databricks & \begin{tabular}[c]{@{}l@{}}-Optimizado para lenguaje R.\\ -Muy simple de operar.\\ -Se enfoca en la usabilidad y en procesos intuitivos de\\ navegación.\\ \end{tabular} & \begin{tabular}[c]{@{}l@{}}-Basic - \$0.07 USD por hora de\\ uso de unidad de procesamiento.\\ -Analytics - \$0.2 USD por hora\\ de uso de unidad de procesamiento. \end{tabular}\\
+			Databricks & \begin{tabular}[c]{@{}l@{}}-Optimizado para lenguaje R.\\ -Muy simple de operar.\\ -Se enfoca en la usabilidad y en procesos intuitivos de\\ navegación. \cite{infoDatabricks}\\ \end{tabular} & \begin{tabular}[c]{@{}l@{}}-Basic - \$0.07 USD por hora de\\ uso de unidad de procesamiento.\\ -Analytics - \$0.2 USD por hora\\ de uso de unidad de procesamiento.\cite{precioDatabricks} \end{tabular}\\
 		\hline
-			Cloudera Manager & \begin{tabular}[c]{@{}l@{}}-Plataforma de administración de clústers.\\ -Tiene su propia implementación de búsqueda y ambiente\\ Hadoop con integración y API estándar (CDH).\\ -Cuenta con una interfaz gráfica vía web que opera el stack \\completo de tecnologías de Big Data.\\ \end{tabular}  & \begin{tabular}[c]{@{}l@{}}-Gratuita (Prueba de 60 días)\\ -Essentials \$0.06 USD por hora\\ de uso de unidad de procesamiento\\ -Enterprise Data Hub \$0.87 USD \\por hora de uso de unidad de\\ procesamiento\end{tabular} \\
+			Cloudera Manager & \begin{tabular}[c]{@{}l@{}}-Plataforma de administración de clústers.\\ -Tiene su propia implementación de búsqueda y ambiente\\ Hadoop con integración y API estándar (CDH).\\ -Cuenta con una interfaz gráfica vía web que opera el stack \\completo de tecnologías de Big Data. \cite{infoCloudera}\\ \end{tabular}  & \begin{tabular}[c]{@{}l@{}}-Gratuita (Prueba de 60 días)\\ -Essentials \$0.06 USD por hora\\ de uso de unidad de procesamiento\\ -Enterprise Data Hub \$0.87 USD \\por hora de uso de unidad de\\ procesamiento. \cite{precioCloudera} \end{tabular} \\
 		\hline
-			HortonWorks& \begin{tabular}[c]{@{}l@{}}-Completamente open-source.\\ -Cuenta con un set completo de herramientas necesarias \\para un ambiente Hadoop.\\ -Se puede lanzar en la nube o en una máquina virtual.\\ -Gran extensibilidad debido a su naturaleza de código abierto.\\ -Utiliza Ambari como interfaz de usuario.\\ \end{tabular} & \begin{tabular}[c]{@{}l@{}} Gratuito\\ \end{tabular}
+			HortonWorks& \begin{tabular}[c]{@{}l@{}}-Completamente open-source.\\ -Cuenta con un set completo de herramientas necesarias \\para un ambiente Hadoop.\\ -Se puede lanzar en la nube o en una máquina virtual.\\ -Gran extensibilidad debido a su naturaleza de código abierto.\\ -Utiliza Ambari como interfaz de usuario. \cite{infoHortonworks}\\ \end{tabular} & \begin{tabular}[c]{@{}l@{}} Gratuito \cite{precioHortonworks}\\ \end{tabular}
 
 		\end{tabular}
 	\end{table}
