--- a/capitulo1/introduccion.tex
+++ b/capitulo1/introduccion.tex
@@ -1,4 +1,4 @@
 \section{Introduccion}
-En el siglo XXI, el Big Data ha sido un tema que ha dado mucho de qué hablar, su estudio ha ido en constante crecimiento así como ha servido de gran manera a empresas dedicadas a las tecnologías de la información a generar conocimiento a partir de cantidades masivas de datos que no tienen una estructura muy bien definida. Como el propio término "Big Data" (Grandes Datos en español) lo hace entender, los la cantidad de datos que se maneja es demasiado grande para ser siquiera almacenada o procesada de manera tradicional. 
+En el siglo XXI, el Big Data ha sido un tema que ha dado mucho de qué hablar, su estudio ha ido en constante crecimiento así como ha servido de gran manera a empresas dedicadas a las tecnologías de la información a generar conocimiento a partir de cantidades masivas de datos que no tienen una estructura muy bien definida. Como el propio término "Big Data" (Grandes Datos en español) lo hace entender, los la cantidad de datos que se maneja es demasiado grande para ser siquiera almacenada o procesada de manera tradicional\cite{intro}. 
 \\
 Big Data provee a quien lo usa conocimiento que de otra forma le habría sido imposible obtener, por lo que puede llegar a ser una herramienta de alto valor entre las empresas.
