--- a/capitulo5/instalador.tex
+++ b/capitulo5/instalador.tex
@@ -11,7 +11,7 @@ La manera en que se pretende que el instalador simplifique el proceso de instala
 Existen diferentes tecnologías para solventar la instalación y configuración de un conjunto previamente determinado, por ejemplo, Docker.
 
 %referencia donde leiste eso
-Sin embargo, para el uso de Big Data se utilizan tecnologías como Apache Hadoop o Apache Spark, mismas que, la instalación y puesta en marcha con Docker se encuentran en fase experimental lo que significa que no es consistente y generaría muchos problemas al momento de querer utilizarlo \cite{generacitapls}.   
+Sin embargo, para el uso de Big Data se utilizan tecnologías como Apache Hadoop o Apache Spark, mismas que, la instalación y puesta en marcha con Docker se encuentran en fase experimental lo que significa que no es consistente y generaría muchos problemas al momento de querer utilizarlo \cite{dockermalo}.   
 \\
 Para solventar esto, se decidió hacer uso del Shell Script de Unix/Linux el cual es simplemente un programa que lee los comandos que se teclean y los convierte en una forma mas entendible para el sistema Unix/Linux. También incluye algunas sentencias básicas de programación que permiten: tomar decisiones, realizar ciclos y almacenar valores en variables \cite{Baze}.
 \\
@@ -28,7 +28,7 @@ En el diagrama de flujo que se muestra en la figura \ref{fig:diagramaFlujo} se p
 	\hypertarget{fig:diagramaFlujo}{\hspace{1pt}}
 	\begin{center}
 		\includegraphics[width=.9\textwidth]{capitulo5/images/diagramaFlujo.png}
-		\caption{Fechas de registro en el archivo de resultados}
+		\caption{Diagrama de flujo del instalador.}
 		\label{fig:diagramaFlujo}
 	\end{center}
 \end{figure}
