--- a/capitulo7/referencias.tex
+++ b/capitulo7/referencias.tex
@@ -1,38 +1,91 @@
 \begin{thebibliography}{}
-	%falta la referencia del libro de donde sacaste lo de la introduccion
+	%ref
+	\bibitem{intro} \textsc{M. Mittal, V.E. Balas, D.J. Hemanth} (2018) \textit{Data Intensive Computing Applications for Big Data}, 2018.
+	%ref
 	\bibitem{Baz} \textsc{Manieviesa, P}, 2017
 	\textit{El Big Data en las empresas},Septiembre 21, 2017 Pymerang.com. Sitio web:http://www.pymerang.com/direccion-de-negocios/821-el-big-data-en-las-empresas.
+	%ref
 	\bibitem{refi} \textsc{Joyanes, L} (2016)
 	<<Big Data, Análisis de grandes volúmenes de datos en organizaciones>>,
 	\textit{AlfaOmega},
+	%ref
 	\bibitem{refi2} \textsc{PowerData}, S/A
 	\textit{Big Data: ¿En qué consiste? Su importancia, desafíos y gobernabilidad},Septiembre 14, 2017 Pymerang.com. Sitio web: http://www.powerdata.es/big-data.
+	%ref
 	\bibitem{refi3} \textsc{KNIME}, (2017)
 	\textit{open for innovation KNIME}, Octubre 6, 2017, de KNIME Sitio web: https://www.knime.com/	
+	%ref
 	\bibitem{refi4} \textsc{IBM},(2017)
 	\textit{IBM SPSS Modeler}, Octubre 6, 2017,de IBM Sitio web. 	
-	\texttt{https://www.ibm.com/es-es/marketplace/spss-modeler/purchase\#product-header-top}
+	https://www.ibm.com/es-es/marketplace/spss-modeler/purchase\#product-header-top
+	%ref
 	\bibitem{refi5} \textsc{QlikSense},(2017)
-	\textit{ Simple to use. More power than you can imagine}, Septiembre 14,2017, de 	QlikSense Sitio web: http://www.qlik.com/	
-	%referencias de data brinks cloudera y horton para estado del arte
+	\textit{ Simple to use. More power than you can imagine}, Septiembre 14,2017, de QlikSense. Sitio web: http://www.qlik.com/	
+	%ref
+	\bibitem{infoDatabricks} \textsc{Databricks}, (2018)
+	\textit{Databricks Unified Analytics Platform}, Agosto 3, 2018, de Databricks. Sitio web: https://databricks.com/product/unified-analytics-platform
+	%ref
+	\bibitem{infoCloudera} \textsc{Cloudera}, (2018), \textit{About Cloudera}, Enero 23, 2018, de Cloudera. Sitio web: https://www.cloudera.com/more/about.html
+	%ref
+	\bibitem{infoHortonworks} \textsc{Hortonworks}, (2018), \textit{Hortonworks Data Platform}, Junio 14, 2018, de Hortonworks. Sitio web: https://es.hortonworks.com/products/data-platforms/hdp/
+	%ref
+	\bibitem{precioDatabricks} \textsc{Databricks}, (2018), \textit{Launch cloud-optimized Apache Spark™ clusters in minutes}, Septiembre 20, 2018, de Databricks. Sitio web: https://databricks.com/try-databricks
+	%ref
+	\bibitem{precioCloudera} \textsc{Cloudera}, (2018), \textit{Download Cloudera}, Septiembre 10, 2018, de Cloudera. Sitio web: https://www.cloudera.com/downloads.html
+	%ref
+	\bibitem{precioHortonworks} \textsc{Hortonworks}, (2018), \textit{Descargas de las plataformas de datos conectadas de Hortonworks}, Agosto 1, 2018, de Hortonworks. Sitio web: https://es.hortonworks.com/downloads/
+	%ref
 	\bibitem{refi6} \textsc{Data Science},(2017)
-	\textit{Does a big data virtual machine machine help in analyzing large files}, Septiembre 14, 2017, de Data Science StackExchange Sitio web https://datascience.stackexchange.com/questions/14993/does-a-big-data-virtual-machine-machine-help-in-analyzing-large-file	
+	\textit{Does a big data virtual machine machine help in analyzing large files}, Septiembre 14, 2017, de Data Science StackExchange. Sitio web https://datascience.stackexchange.com/questions/14993/does-a-big-data-virtual-machine-machine-help-in-analyzing-large-file	
+	%ref
 	\bibitem{refi7} \textsc{Srinivasan, V.} (2016)
 	<<The Intelligent Enterprise in the Era of Big Data.>>,
 	Canada: John Wiley \& Sons.
+	%ref
 	\bibitem{refi8} \textsc{Manchónn M.},(2017)
 	\textit{ Las empresas y el reto del big data: sólo usan el 1\% de los datos.},  Junio 6, 2017, de EDeconomíaDigital
 	Sitio web: https://www.economiadigital.es/directivos-y-empresas/empresas-big-data-uno-por-ciento\_408504\_102.html
+	%ref
 	\bibitem{refi9} \textsc{García, S},(2017)
 	\textit{Big Data: realidades, retos y limitaciones}, Julio 16, 2017, de Excelsior Sitio web:
 	http://www.excelsior.com.mx/opinion/opinion-del-experto-nacional/2017/07/16/1175906	
+	%ref
 	\bibitem{refi10} \textsc{Max,D},(2017)
 	\textit{ An overview of Distributed Computing frameworks.}, Agosto 18, 2017, de https://users.cs.duke.edu Sitio web:
 	https://users.cs.duke.edu/~maxdml/drupal/?q=distributed-computing-intro
-
-	
-	%falta la referencia de lo de que dockers esta en fase experimental esta en instalador, en la parte de ánalisis:)
+	%ref
+	\bibitem{dockermalo} \textsc{The Apache Software Foundation} (2018)
+	\textit{Launching Applications Using Docker Containers}, Marzo 16, 2018, de Apache Hadoop. Sitio web: https://hadoop.apache.org/docs/r3.0.1/hadoop-yarn/hadoop-yarn-site/DockerContainers.html
+	%ref
 	\bibitem{Baze} \textsc{Santos A}
-	\textit{Programación Shell},Septiembre 12, 2018 freeshel.de. Sitio web: www.freeshell.de/~rasoda/programacion/guia-shell.pdf
+	\textit{Programación Shell}, Septiembre 12, 2018, de freeshel.de. Sitio web: www.freeshell.de/~rasoda/programacion/guia-shell.pdf
+	%ref
+	\bibitem{bigDataDef} \textsc{Oracle} (2017) \textit{The Definition of Big Data}, Marzo 22, 2017, de Oracle. Sitio web: https://www.oracle.com/big-data/guide/what-is-big-data.html
+	%ref
+	\bibitem{bigUso} \textsc{Oracle} (2017) \textit{Big Data Use Cases}, Abril 14, 2017, de Oracle. Sitio web: https://www.oracle.com/big-data/guide/big-data-use-cases.html
+	%ref
+	\bibitem{mineriaDef} \textsc{Sinnexus} (2016) \textit{Datamining (Minería de datos)}, Marzo 6, 2016 de Sinnexus. Sitio web: https://www.sinnexus.com/business\_intelligence/datamining.aspx
+	%ref
+	\bibitem{mineriaEsc} \textsc{Microsoft} (2017) \textit{Conceptos de minería de datos}, Julio 22, 2017, de Microsoft. Sitio web: https://docs.microsoft.com/es-es/sql/analysis-services/data-mining/data-mining-concepts?view=sql-server-2017
+	%ref
+	\bibitem{arbolesDes} \textsc{GestionDeOperaciones} (2016) \textit{Árbol de Decisión (Qué es y para qué sirve)}, Marzo 17, 2016 de www.gestiondeoperaciones.net. Sitio web: https://www.gestiondeoperaciones.net/procesos/arbol-de-decision/
+	%ref
+	\bibitem{arbolPartes} \textsc{LucidChart} (2016) \textit{Qué es un diagrama de árbol de decisión}, Diciembre 12, 2016, de LucidChart. Sitio web: https://www.lucidchart.com/pages/es/qu\%C3\%A9-es-un-diagrama-de-\%C3\%A1rbol-de-decisi\%C3\%B3n
+	%ref
+	\bibitem{id3} \textsc{Sefik Ilkin Serengil} (2017) \textit{A Step by Step ID3 Decision Tree Example}, Noviembre 20, 2017, de Sefik Ilkin Serengil. Sitio web: https://sefiks.com/2017/11/20/a-step-by-step-id3-decision-tree-example/
+	%ref
+	\bibitem{c4.5} \textsc{Sefik Ilkin Serengil} (2018) \textit{A Step By Step C4.5 Decision Tree Example}, Mayo 13, 2018, de Sefik Ilkin Serengil. Sitio web: https://sefiks.com/2018/05/13/a-step-by-step-c4-5-decision-tree-example/
+	%ref
+	\bibitem{knn} \textsc{Deephanshu Bhalla} (2016) \textit{K NEAREST NEIGHBOR : STEP BY STEP TUTORIAL}, Septiembre 30, 2016, de Deephanshu Bhalla. Sitio web: https://www.listendata.com/2017/12/k-nearest-neighbor-step-by-step-tutorial.html
+	%ref
+	\bibitem{KMeans} \textsc{Andrea Trevino} (2016) \textit{Introduction to K-means Clustering}, Diciembre 6, 2016, de Oracle. Sitio web: https://www.datascience.com/blog/k-means-clustering
+	%ref
+	\bibitem{mapReduce} \textsc{IBM}, (2018) \textit{Apache MapReduce}, Febrero 8, 2018, de IBM. Sitio web: https://www.ibm.com/analytics/hadoop/mapreduce
+	%ref
+	\bibitem{hadoop} \textsc{Abraham Requena Mesa} (2017) \textit{¿Qué es Hadoop?}, Septiembre 28, 2017, de OpenWebinars. Sitio web: https://openwebinars.net/blog/que-es-hadoop/
+	%ref
+	\bibitem{spark} \textsc{Abraham Requena Mesa} (2018) \textit{Qué es Apache Spark}, Julio 02, 2018 de OpenWebinars. Sitio web: https://openwebinars.net/blog/que-es-apache-spark/
+	%ref
+	\bibitem{distH} \textsc{David Loshin} (2017) \textit{Explorando distribuciones Hadoop para gestionar big data}, Mayo 30, 2017, de SearchDataCenter. Sitio web: https://searchdatacenter.techtarget.com/es/cronica/Explorando-distribuciones-Hadoop-para-gestionar-big-data
 
 \end{thebibliography}
