--- a/capitulo1/arquitectura.tex
+++ b/capitulo1/arquitectura.tex
@@ -9,7 +9,7 @@ El siguiente diagrama muestra la arquitectura prevista del sistema:
 	\end{center}
 \end{figure}
 \\ 
-Con esta arquitectura será posible adaptar el Framework a diversos casos de estudio de las empresas, modificando únicamente archivos que serán destinados para la configuración de dichos
+Con esta arquitectura será posible adaptar el ambiente a diversos casos de estudio de las empresas, modificando únicamente archivos que serán destinados para la configuración de dichos
 casos de estudio. 
 \\
 Esto sin tener que modificar la arquitectura del sistema ni entender su funcionamiento interno. Será posible
