--- a/capitulo1/limitantes.tex
+++ b/capitulo1/limitantes.tex
@@ -9,7 +9,7 @@ Primeramente las limitaciones que se han detectado hasta ahora en cuanto a equip
 \end{itemize}
 Por otro lado los alcances del proyecto son limitados por lo que se describirá un poco acerca de ello
 \begin{itemize}
-	\item Solo se tendrán 3 algoritmos de minería de datos para ejecutar dentro del Framework, para un estudio mas especializado seria conveniente incluir mas algoritmos.
+	\item Solo se tendrán 3 algoritmos de minería de datos para ejecutar dentro del ambiente, para un estudio mas especializado seria conveniente incluir mas algoritmos.
 	\item Las pruebas y desarrollo sobre este trabajo terminal en equipos de computo tradicionales serán ejecutadas unicamente con 3 nodos de datos/replica, por lo que, para un mejor desempeño sería conveniente agregar mas nodos de datos/replica al cluster.
 	\item El archivo de datos proveniente del caso de estudio es de 21 GB, una empresa podría manejar archivos de mayor longitud, por lo que las pruebas realizadas podrían no ser significativos para la cantidad de datos que puedan manejar determinadas empresas. 
 	\item Las tablas de datos que se suban a el repositorio , tendrán que subirse por separado y el manejo de los datos que se podrá ejecutar descargara las relaciones que existan entre las tablas y procesará cada tabla por separado.
