--- a/capitulo1/objetivos.tex
+++ b/capitulo1/objetivos.tex
@@ -2,7 +2,7 @@
 \section{Objetivos}
 \subsection{General}
 Desarrollar un software que permita realizar análisis de datos para la toma de decisiones, mediante la implementación de un
-ambiente (Framework) [9] de cómputo distribuido basado en Big Data, y aplicando técnicas de aprendizaje de máquina (machine
+ambiente de cómputo distribuido basado en Big Data, y aplicando técnicas de aprendizaje de máquina (machine
 learning), como reglas de asociación y árboles de decisión, a grandes volúmenes de datos.
 \subsection{Especificos}
 \begin{itemize}
