--- a/capitulo1/trabajoafuturo.tex
+++ b/capitulo1/trabajoafuturo.tex
@@ -19,12 +19,12 @@ Se pretende desarrollar este prototipo en Trabajo Terminal 2 el cual comprende e
 Integrar los 2 puntos comprendidos en el prototipo 3 los cuales pueden ser consultados en la sección anterior \ref{proto3} de tal forma que los algoritmos de minera de datos puedan ser accedidos y utilizados desde la pagina web elaborada. 
 \\
 Además de que estos algoritmos se ejecutarán en el cluster generado en los prototipos Prototipo 1 \nameref{cap:Cap3} y Prototipo 2 \nameref{cap:Cap4} desarrollados en trabajo terminal 1.
-\subsection{Prototipo 5: Luminus como framework}
-Este prototipo se encontraba diseñado unicamente para convertir este proyecto a un framework que pueda ser adaptado a otros casos de estudio, sin embargo, se vio la necesidad de crear un instalador que permita cargar todo el contenido del Trabajo Terminal al equipo del cliente para que este pueda utilizarlo.\\
-Esto con el objetivo de que, el instalador cargue a su equipo todo lo que Luminus necesita para funcionar. y unicamente trabaje sobre el Framework. \\
-por tal motivo se explicarán los alcances del Framework y del instalador por separado.
-\subsubsection{Framework}
-Para la parte del Framework se busca que se diseñe una plantilla de ajuste la cual permita la adaptación para otros casos de estudio debido a que los algoritmos de Big Data suelen tener diferentes entradas, las cuales cambian de acuerdo para cada caso de estudio.
+\subsection{Prototipo 5: Luminus}
+Este prototipo se encontraba diseñado unicamente para convertir este proyecto a un ambiente de análisis de datos adaptable a otros casos de estudio, sin embargo, se vio la necesidad de crear un instalador que permita cargar todo el contenido del Trabajo Terminal al equipo del cliente para que este pueda utilizarlo.\\
+Esto con el objetivo de que, el instalador cargue a su equipo todo lo que Luminus necesita para funcionar. y unicamente trabaje sobre el la plantilla de ajuste. \\
+Por tal motivo se explicarán los alcances de la plantilla y del instalador por separado.
+\subsubsection{Plantilla de ajuste}
+Para la parte de la plantilla de ajusteo se busca que se diseñe una plantilla de ajuste la cual permita la adaptación para otros casos de estudio debido a que los algoritmos de Big Data suelen tener diferentes entradas, las cuales cambian de acuerdo para cada caso de estudio.
 \\
 \subsubsection{Instalador}
 Un instalador suele ser un sistema bastante complejo, ya que realiza las siguientes tareas:\\
