Modificacion de alcances

--- a/capitulo1/justificacion.tex
+++ b/capitulo1/justificacion.tex
@@ -1,7 +1,7 @@
 \section{Justificación}
 %refi 6 es la 4
 El principal motivo de desarrollo de la presente propuesta es el de facilitar a las empresas u organizaciones la implementación de
-un ambiente de Big Data, dado que se tiene la creencia de que es un proceso complicado, tardado y muy costoso. Cada uno de los
+un ambiente de Big Data, dado que se trata de un proceso complicado, tardado y muy costoso. Cada uno de los
 factores mencionados anteriormente puede ser justificado de la siguiente manera: la complejidad de la implementación de Big Data
 se puede reducir mediante la preparación previa del software necesario para la infraestructura que tenga actualmente la empresa; de
 igual forma se pueden reducir los tiempos de implementación mediante la automatización de las configuraciones y pre
