--- a/capitulo1/trabajoafuturo.tex
+++ b/capitulo1/trabajoafuturo.tex
@@ -3,14 +3,13 @@
 \label{proto3}
 Se pretende desarrollar este prototipo en Trabajo Terminal 2 el cual incluirá las siguientes tareas:
 \begin{itemize}
-	\item Hacer uso de un algoritmo de cada una de los tipos de algoritmos que se enlistan a continuación:
+	\item Hacer uso de un algoritmo de los tipos de algoritmos de minería de datos que se enlistan a continuación
 	\begin{itemize}
 		\item Reglas de asociación
 		\item Arboles de decisión
-		\item Aprendizaje maquina
 	\end{itemize}
 	 escrito en java que se adapte al caso de estudio así como su personalización para que pueda ser adaptado a otros casos de estudio de manera sencilla.
-	\item Elaboración de las pantallas que conformarán el sitio web, diseño, estructura y contenido que se puede ver como un mapa de navegación que aun no esta integrado a Luminus por lo tanto, no es funcional.  
+	\item Elaboración de las pantallas que conformarán el sitio web, diseño, estructura y contenido que aun no estarán integradas a Luminus por lo tanto, no serán funcionales.  
 \end{itemize}
 \subsection{Prototipo 4: Algoritmos de minería de datos desde una pagina web}
 Se pretende desarrollar este prototipo en Trabajo Terminal 2 el cual comprende el desarrollo de la siguiente tarea:
