--- a/Base.tex
+++ b/Base.tex
@@ -67,7 +67,6 @@
 	%\maketitle
 	%\chapter{Capitulo x}\label{cap:Cap1}
 			\cfinput{portada}
-
 	%=========================================================
 	% Hoja de revisión
 	%\makeDocInfo
@@ -79,27 +78,24 @@
 	
 	%=========================================================
 	% Indices del documento
-
 	%\newpage
 	%
 	%\LRCornerWallPaper{1}{cdt/theme/pleca.png}
 	
 	
 	%\hideControlVersion
-
 	\tableofcontents
 	
-
 	\chapter{Capitulo 1}\label{cap:Cap1}
 	\cfinput{capitulo1/introduccion} 
 	\cfinput{capitulo1/planteamientoproblema} 
-	\cfinput{capitulo1/propuestasolucion}
-	\cfinput{capitulo1/estadoarte} 
+	\cfinput{capitulo1/propuestasolucion}%ya
+	\cfinput{capitulo1/estadoarte} %kevin
 	\cfinput{capitulo1/justificacion} 
 	\cfinput{capitulo1/objetivos} 
-	\cfinput{capitulo1/arquitectura} %yo los escribi revisalos pls
-	\cfinput{capitulo1/limitantes} %yo los escribi revisalos pls
-	\cfinput{capitulo1/trabajoafuturo} %yo los escribi revisalos pls  
+	\cfinput{capitulo1/arquitectura} 
+	\cfinput{capitulo1/limitantes} 
+	\cfinput{capitulo1/trabajoafuturo} 
 	%
 	\chapter{Marco teórico}\label{cap:Cap2}
 	\cfinput{capitulo2/marcoteorico}
